[레거시 코드 리팩터링 - 2단계] 바론(이소민) 미션 제출합니다. (#614)
* config: bin 디렉터리 gitignore 추가

* test: 테스트 코드 fixture 적용

* refactor: Menu 도메인 setter 제거

* refactor: Product, MenuGroup 도메인 setter 제거

* refactor: MenuProduct setter 제거

* refactor: Order setter 제거

* refactor: OrderLineItem setter 제거

* refactor: OrderTable setter 제거

* refactor: TableGroup setter 제거

* refactor: Service, Controller가 DTO로 통신하도록 변경

* refactor: JPA 마이그레이션

* refactor: 서비스 비즈니스 로직 도메인으로 이동