@@ -2,102 +2,68 @@ package kitchenpos.application;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.BDDMockito.given;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.MenuGroupDao;
-import kitchenpos.dao.MenuProductDao;
-import kitchenpos.dao.ProductDao;
-import kitchenpos.domain.Menu;
+import kitchenpos.application.dto.menu.MenuRequest;
+import kitchenpos.application.dto.menu.MenuResponse;
+import kitchenpos.application.dto.menu.ProductQuantityDto;
 import kitchenpos.domain.MenuGroup;
-import kitchenpos.domain.MenuProduct;
+import kitchenpos.domain.Price;
 import kitchenpos.domain.Product;
+import kitchenpos.repository.MenuGroupRepository;
+import kitchenpos.repository.ProductRepository;
+import kitchenpos.support.DataDependentIntegrationTest;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
 
-@ExtendWith(MockitoExtension.class)
-class MenuServiceTest {
+class MenuServiceTest extends DataDependentIntegrationTest {
 
-    @Mock
-    private MenuGroupDao menuGroupDao;
+    private static final long NOT_EXIST_ID = Long.MAX_VALUE;
 
-    @Mock
-    private MenuDao menuDao;
+    @Autowired
+    private MenuGroupRepository menuGroupRepository;
 
-    @Mock
-    private MenuProductDao menuProductDao;
+    @Autowired
+    private ProductRepository productRepository;
 
-    @Mock
-    private ProductDao productDao;
-
-    @InjectMocks
+    @Autowired
     private MenuService menuService;
 
     @DisplayName("메뉴를 생성, 저장한다.")
     @Test
     void create_success() {
         // given
-        final MenuGroup menuGroup = new MenuGroup();
-        menuGroup.setId(1L);
-        menuGroup.setName("menuGroup");
-
-        final Product product = new Product();
-        product.setId(1L);
-        product.setName("product");
-        product.setPrice(BigDecimal.valueOf(1000L));
-
-        final MenuProduct menuProduct = new MenuProduct();
-        final Menu menu = new Menu();
-        menu.setId(1L);
-        menu.setMenuProducts(List.of(menuProduct));
-        menu.setMenuGroupId(menuGroup.getId());
-        menu.setName("menu");
-        menu.setPrice(BigDecimal.valueOf(2000L));
-
-        menuProduct.setMenuId(menu.getId());
-        menuProduct.setProductId(product.getId());
-        menuProduct.setQuantity(2L);
-        menuProduct.setSeq(1L);
-
-        given(menuGroupDao.existsById(anyLong()))
-            .willReturn(true);
-        given(productDao.findById(anyLong()))
-            .willReturn(Optional.of(product));
-        given(menuDao.save(any(Menu.class)))
-            .willReturn(menu);
-        given(menuProductDao.save(any(MenuProduct.class)))
-            .willReturn(menuProduct);
+        final MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("menuGroup"));
+        final Product product = productRepository.save(new Product("product", Price.from(BigDecimal.valueOf(1000L))));
+        final MenuRequest menuRequest = new MenuRequest("menu", BigDecimal.valueOf(500L), menuGroup.getId(), List.of(
+            new ProductQuantityDto(product.getId(), 2)
+        ));
 
         // when
-        final Menu savedMenu = menuService.create(menu);
+        final MenuResponse savedMenu = menuService.create(menuRequest);
 
         // then
-        assertThat(savedMenu).isEqualTo(menu);
+        assertAll(
+            () -> assertThat(savedMenu.getId()).isNotNull(),
+            () -> assertThat(savedMenu.getName()).isEqualTo("menu"),
+            () -> assertThat(savedMenu.getMenuProducts()).usingRecursiveComparison()
+            .isEqualTo(List.of(new ProductQuantityDto(product.getId(), 2)))
+        );
     }
 
     @DisplayName("메뉴를 저장 시, 가격이 0보다 작으면 예외가 발생한다.")
     @Test
     void create_price_fail() {
         // given
-        final MenuProduct menuProduct = new MenuProduct();
-        final Menu menu = new Menu();
-        menu.setId(1L);
-        menu.setMenuProducts(List.of(menuProduct));
-        menu.setMenuGroupId(1L);
-        menu.setName("menu");
-        menu.setPrice(BigDecimal.valueOf(-1L));
+        final MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("menuGroup"));
+        final MenuRequest menuRequest = new MenuRequest("menu", BigDecimal.valueOf(-1L), menuGroup.getId(), Collections.emptyList());
 
         // when, then
-        assertThatThrownBy(() -> menuService.create(menu))
+        assertThatThrownBy(() -> menuService.create(menuRequest))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -105,19 +71,10 @@ class MenuServiceTest {
     @Test
     void create_menuGroup_fail() {
         // given
-        final MenuProduct menuProduct = new MenuProduct();
-        final Menu menu = new Menu();
-        menu.setId(1L);
-        menu.setMenuProducts(List.of(menuProduct));
-        menu.setMenuGroupId(1L);
-        menu.setName("menu");
-        menu.setPrice(BigDecimal.valueOf(1000L));
-
-        given(menuGroupDao.existsById(anyLong()))
-            .willReturn(false);
+        final MenuRequest menuRequest = new MenuRequest("menu", BigDecimal.valueOf(500L), NOT_EXIST_ID, Collections.emptyList());
 
         // when, then
-        assertThatThrownBy(() -> menuService.create(menu))
+        assertThatThrownBy(() -> menuService.create(menuRequest))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -125,22 +82,14 @@ class MenuServiceTest {
     @Test
     void create_menuProduct_fail() {
         // given
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setProductId(1L);
-        final Menu menu = new Menu();
-        menu.setId(1L);
-        menu.setMenuProducts(List.of(menuProduct));
-        menu.setMenuGroupId(1L);
-        menu.setName("menu");
-        menu.setPrice(BigDecimal.valueOf(1000L));
+        final MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("menuGroup"));
 
-        given(menuGroupDao.existsById(anyLong()))
-            .willReturn(true);
-        given(productDao.findById(anyLong()))
-            .willReturn(Optional.empty());
+        final MenuRequest menuRequest = new MenuRequest("menu", BigDecimal.valueOf(500L), menuGroup.getId(), List.of(
+            new ProductQuantityDto(NOT_EXIST_ID, 2)
+        ));
 
         // when, then
-        assertThatThrownBy(() -> menuService.create(menu))
+        assertThatThrownBy(() -> menuService.create(menuRequest))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -148,29 +97,14 @@ class MenuServiceTest {
     @Test
     void create_menuTotalPrice_fail() {
         // given
-        final Product product = new Product();
-        product.setId(1L);
-        product.setName("product");
-        product.setPrice(BigDecimal.valueOf(1000L));
-
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setProductId(product.getId());
-        menuProduct.setQuantity(2L);
-
-        final Menu menu = new Menu();
-        menu.setId(1L);
-        menu.setMenuProducts(List.of(menuProduct));
-        menu.setMenuGroupId(1L);
-        menu.setName("menu");
-        menu.setPrice(BigDecimal.valueOf(2001L));
-
-        given(menuGroupDao.existsById(anyLong()))
-            .willReturn(true);
-        given(productDao.findById(anyLong()))
-            .willReturn(Optional.of(product));
+        final Product product = productRepository.save(new Product("product", Price.from(BigDecimal.valueOf(1000L))));
+        final MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("menuGroup"));
+        final MenuRequest menuRequest = new MenuRequest("menu", BigDecimal.valueOf(2001L), menuGroup.getId(), List.of(
+            new ProductQuantityDto(product.getId(), 2)
+        ));
 
         // when, then
-        assertThatThrownBy(() -> menuService.create(menu))
+        assertThatThrownBy(() -> menuService.create(menuRequest))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -178,26 +112,19 @@ class MenuServiceTest {
     @Test
     void list() {
         // given
-        final MenuProduct menuProduct = new MenuProduct();
-        final Menu menu1 = new Menu();
-        menu1.setId(1L);
-        menu1.setMenuProducts(List.of(menuProduct));
-        menu1.setMenuGroupId(1L);
-        menu1.setName("menu1");
-        menu1.setPrice(BigDecimal.valueOf(2000L));
-
-        menuProduct.setMenuId(menu1.getId());
-        menuProduct.setProductId(1L);
-        menuProduct.setQuantity(2L);
-        menuProduct.setSeq(1L);
-
-        given(menuDao.findAll())
-            .willReturn(List.of(menu1));
+        final MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("menuGroup"));
+        final Product product = productRepository.save(new Product("product", Price.from(BigDecimal.valueOf(1000L))));
+        final MenuRequest menuRequest = new MenuRequest("menu", BigDecimal.valueOf(1000L), menuGroup.getId(), List.of(
+            new ProductQuantityDto(product.getId(), 2L)
+        ));
+        final MenuResponse menuResponse = menuService.create(menuRequest);
 
         // when
-        final List<Menu> foundMenus = menuService.list();
+        final List<MenuResponse> foundMenus = menuService.list();
 
         // then
-        assertThat(foundMenus).containsExactly(menu1);
+        assertThat(foundMenus).usingRecursiveComparison()
+            .comparingOnlyFields("id")
+            .isEqualTo(List.of(menuResponse));
     }
 }
